tdf#132802 DOCX import: fix list bottom auto margins

of the last list item, when its numbering based on
the paragraph style.

Before tables, table rows and before paragraphs without
numbering or with different numbering list items got a
regression from commit 9a132c8fab7d4d70b91e5ed92429c70a0466afcb
(tdf#122342 DOCX import: fix bottom auto margin in lists)

Change-Id: I23c73d94569e785ec780d708d983764534e356c2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93973
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>